--- a/app/src/main/res/layout/fragment_machine_list.xml
+++ b/app/src/main/res/layout/fragment_machine_list.xml
@@ -12,12 +12,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/machine_id"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="20sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/machine_status"
         android:layout_below="@+id/machine_id"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="20sp" />
 </RelativeLayout>
