--- a/app/src/main/res/layout/fragment_error_paper.xml
+++ b/app/src/main/res/layout/fragment_error_paper.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/refill"
-        android:id="@+id/textView3"
+        android:id="@+id/refill_paper"
         android:layout_gravity="center_horizontal"
         android:textSize="24sp"
         android:paddingTop="20dp"
@@ -78,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/check_paper"
-        android:id="@+id/textView9"
+        android:id="@+id/check_paper"
         android:layout_gravity="center_horizontal"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
@@ -121,7 +121,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/reset_printer"
-        android:id="@+id/textView4"
+        android:id="@+id/reset_printer"
         android:layout_gravity="center_horizontal"
         android:paddingTop="20dp"
         android:textSize="24sp"
@@ -164,7 +164,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/restart"
-        android:id="@+id/textView7"
+        android:id="@+id/restart_machine"
         android:layout_gravity="center_horizontal"
         android:paddingBottom="20dp"
         android:paddingTop="20dp"
