--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="2"
-        android:paddingLeft="5dp">
+        android:paddingLeft="5dp"
+        android:backgroundTint="#95e69d">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/machine_numbers_container">
+
+
+        </FrameLayout>
 
         <FrameLayout
         android:layout_width="match_parent"
