--- a/app/src/main/res/layout/fragment_machine_list.xml
+++ b/app/src/main/res/layout/fragment_machine_list.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MachineAlertsListFragment">
+    tools:context=".MachineAlertsListFragment"
+
+    android:scrollIndicators="right">
 
 
 
