Even  more stuff

--- a/app/src/main/res/layout/fragment_how_to_fix.xml
+++ b/app/src/main/res/layout/fragment_how_to_fix.xml
@@ -4,10 +4,15 @@
     android:layout_height="match_parent"
     tools:context="com.michaelwarne.casinomanager.HowToFixFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/fix_text"
+        android:layout_gravity="left|top"
+        android:focusable="false"
+        android:layout_marginTop="28dp"
+        android:layout_margin="28dp" />
 </FrameLayout>
