--- a/app/src/main/res/layout/fragment_machine_list.xml
+++ b/app/src/main/res/layout/fragment_machine_list.xml
@@ -7,20 +7,36 @@
     android:scrollIndicators="right">
 
 
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Machine ID:"
+        android:id="@+id/machine_id_text"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:textSize="20sp"
+        android:paddingEnd="10dp" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/machine_id"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:layout_toRightOf="@id/machine_id_text"
         android:textSize="20sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Status:"
+        android:id="@+id/machine_status_text"
+        android:layout_below="@id/machine_id_text"
+        android:textSize="20sp"
+        android:paddingEnd="10dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/machine_status"
-        android:layout_below="@+id/machine_id"
-        android:layout_alignParentStart="true"
+        android:layout_below="@id/machine_id"
+        android:layout_toRightOf="@+id/machine_status_text"
         android:textSize="20sp" />
 </RelativeLayout>
